[package]
name = "truegear-vrc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rosc = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"
futures-util = "0"
tracing = "0"
tracing-subscriber = "0"